# ani-todo-app

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_issue.md
.github/workflows/: release.yml
scripts/: release.cjs  sync-version.cjs  validate-version.cjs
src/: App.css  App.tsx  index.css  main.tsx  theme.ts
src-tauri/: .gitignore  Cargo.toml  package.json  tauri.conf.json
src-tauri/configuration/: config.yaml
src-tauri/migrations/: 20250720053547_create_ani_items.sql  20250720161027_create_ani_collect.sql  20250721040849_column_is_favorite_in_ani_items.sql  20250723071642_add_column_ani_title_in_ani_collect.sql  20250723152052_create_table_ani_info.sql  20250723152100_migrate_from_data_ani_item_to_ani_info.sql  20250723152120_drop_table_ani_item_and_ani_collect.sql  20250723152139_create_table_ani_collect.sql  20250723152200_create_table_ani_watch_history.sql  20250725152842_add_index_for_ani_watch_history.sql  20250728035630_add_foreign_key_and_trigger.sql  20250729031919_creat_table_latest.sql  20250729105351_update_ani_watch_history_foreign_key.sql  20250808080738_idx_ani_collect_title.sql
src-tauri/migrations/history/: 20250723165059_migrate_data_in_ani_info.sql  20250723172927_add_column_for_ani_collect.sql  20250728053215_update_time_column_to_millis.sql
src-tauri/sql/: init.sql
src-tauri/src/: command.rs  configuration.rs  db.rs  lib.rs  main.rs  platforms.rs  startup.rs  state.rs  tasks.rs  types.rs  utils.rs
src-tauri/src/command/: mod.rs  service.rs
src-tauri/src/db/: common.rs  mod.rs  po.rs  sqlite.rs
src-tauri/src/tasks/: commands.rs  cron_task.rs  scheduler.rs  task.rs
src-tauri/src/utils/: date_utils.rs  http_client.rs
src-tauri/tests/: fetch_test.rs
src/components/: AboutPage.tsx  AniFilter.tsx  AniImage.tsx  AniInfo.tsx  AniItem.tsx  AniList.tsx  AniSearch.tsx  AniStat.tsx  AniSummary.tsx  AnimeDataSummary.tsx  BackToTop.tsx  CustomizedDataGrid.tsx  CustomizedDateGrid.tsx  Header.tsx  HistoryDataGrid.tsx  HistoryPage.tsx  HistoryTable.tsx  HomePage.tsx  RefreshButton.tsx
src/components/data/: gridData.tsx
src/components/dataGrid/: CustomDataGrid.tsx  DetailDialog.tsx  FilterMenu.tsx  Pagination.tsx  TableHeaderCell.tsx  TableRowItem.tsx
src/contexts/: AppProvider.tsx  ClearedContext.tsx  FavoriteAniContext.tsx  FavoriteAniProvider.tsx  WatchedAniContext.tsx  WatchedAniProvider.tsx
src/data/: ani_data.json
src/hooks/: useAniData.ts  useAniHistoryData.ts  useCleared.ts  useDebounced.ts  useFavoriteAni.ts  useWatchedAni.ts
src/pages/: AboutPage.tsx  HistoryPage.tsx  HomePage.tsx
src/utils/: api.ts  utils.test.ts  utils.ts
