[package]
name = "ani-todo-app"               # Crate 名称，对应二进制的 name
version = "0.1.1"
authors = ["likanug <likanug.g@qq.com>"]
edition = "2021"
description = "A Tauri‑based Todo App (v2.0 +)"
license = "MIT"
repository = "https://github.com/yourname/ani-todo-app"
rust-version = "1.86"
# 让 `cargo run` 默认执行名为 ani-todo-app 的二进制（即 src-tauri/src/main.rs）
default-run = "ani-todo-app"

[dependencies]
# 核心 Tauri v2 框架，启用所有 API
tauri = { version = "2" }

[build-dependencies]

[features]
# 默认生产模式特性，让打包后二进制从本地文件系统加载前端资源
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 明确声明二进制目标，路径指向 Tauri 的主入口
[[bin]]
name = "ani-todo-app"
path = "src-tauri/src/main.rs"
