[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.4.8"
authors = ["likanug <likanug.g@qq.com>"]
edition = "2021"
description = "A Tauri‑based Todo App (v2.0 +)"
keywords = ["anime", "crawler", "network", "schedule-tasks"]
license = "MIT"
repository = "https://github.com/bruceblink/ani-todo-app"

[workspace.dependencies]
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-build = "2"
tauri-plugin-log = "2"
# 如需异步运行时支持
tokio = { version = "1", features = ["full"] }

# 示例：使用 SQLx 访问 sqlite，可根据需要替换
sqlx = { version = "0.8", features = ["sqlite", "macros", "runtime-tokio-rustls", "migrate"] }

# 序列化库
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
base64 = "0.22"
chrono = { version = "0.4",  features = ["alloc"] }
regex = "1"
once_cell = "1.21"
scraper = "0.25"
anyhow = "1"
config = "0.15"
thiserror = "2.0"
cron = "0.15"
async-trait = "0.1"
num_cpus = "1.17"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
url = "2.5"
tempfile = "3"
