[package]
name = "ani-todo-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
# 如需异步运行时支持
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# 示例：使用 SQLx 访问 PostgreSQL，可根据需要替换
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }

# 序列化库
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
