[package]
name = "ani-todo-app"               # Crate 名称，对应二进制的 name
version = "0.4.3"
authors = ["likanug <likanug.g@qq.com>"]
edition = "2021"
description = "A Tauri‑based Todo App (v2.0 +)"
license = "MIT"
repository = "https://github.com/yourname/ani-todo-app"
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.6", features = [ "tray-icon" ] }
tauri-plugin-log = "2"
# 如需异步运行时支持
tokio = { version = "1", features = ["full"] }

# 示例：使用 SQLx 访问 sqlite，可根据需要替换
sqlx = { version = "0.8", features = ["sqlite", "macros", "runtime-tokio-rustls", "migrate"] }

# 序列化库
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
base64 = "0.22"
chrono = { version = "0.4",  features = ["alloc"] }
regex = "1"
once_cell = "1.21.3"
scraper = "0.24.0"
anyhow = "1"
config = "0.15"
thiserror = "2.0.12"
cron = "0.15"
async-trait = "0.1.88"
num_cpus = "1.17.0"

[dev-dependencies]  # 仅用于测试
tempfile = "3"
