[package]
name = "ani-todo-app"               # Crate 名称，对应二进制的 name
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
log.workspace = true
tauri.workspace = true
tauri-plugin-log.workspace = true
# 如需异步运行时支持
tokio.workspace = true
# 示例：使用 SQLx 访问 sqlite，可根据需要替换
sqlx.workspace = true
# 序列化库
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
base64.workspace = true
chrono.workspace = true
regex.workspace = true
once_cell.workspace = true
scraper.workspace = true
anyhow.workspace = true
config.workspace = true
thiserror.workspace = true
cron.workspace = true
async-trait.workspace = true
num_cpus.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-dialog.workspace = true
url.workspace = true

[dev-dependencies]  # 仅用于测试
tempfile = "3"
